style.css
* {
    font-family: Roboto, "Times New Roman", Times, serif;
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

.body {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.header {
    background-color: #1F2937;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    width: 100%;
    height: 60px;
}

.header-links {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 20px;
}

.main-1 {
    background-color: #1F2937;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    gap: 100px;
}

.main-1-left {
    color: #F9FAF8;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-between;
    gap: 10px;
    height: auto;
    flex: 1 1 0px;
    padding: 100px 0px 100px 290px;
}

.main-1-right {
    display: flex;
    align-items: flex-start;
    justify-content: flex-start;
    padding: 100px 290px 100px 0px;
    flex: 1 1 0px;
}

.main-2 {
    background-color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    padding: 0px 0px 50px 0px;
}

.main-2-up {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 50px;
    color: #1F2937;
    font-weight: 900;
    font-size: 36px;
}

.main-2-down {
    display: flex;
    align-items: center;
    justify-content: center;
}

.main-2 .info {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: 0px 0px 50px 0px;
    max-width: 200px;
    text-align: center;
    color: #1F2937;
    font-size: 18px;
    gap: 30px;
}

.main-2 .img-text {
    font-size: 18px;
}

.main-3 {
    background-color: #E5E7EB;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    padding: 100px;
}

.main-3 .quote {
    font-size: 36px;
    color: #1F2937;
    font-style: italic;
    max-width: 750px;
}

.main-3 .author {
    font-size: 24px;
    color: #1F2937;
    font-weight: 700;
    width: 750px;
    text-align: right;
}

.main-4 {
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    gap: 10px;
    padding: 100px;
}

.main-4 .blue-container {
    background-color: #3882F6;
    color: #F9FAF8;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    max-width: 900px;
    padding: 50px;
    border-radius: 10px;
    gap: 100px;
}

#header-logo {
    color: #F9FAF8;
    font-size: 24px;
    font-weight: 900;
}
div a {
    color: #E5E7EB;
    text-decoration: none;
    font-size: 24px;
}

.main-1 img {
    width: 450px;
    height: auto;
}

.welcome-text {
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;
}

.secondary-text {
    font-size: 18px;
    color: #E5E7EB
}

button {
    background-color: #3882F6;
    color: #F9FAF8;
    padding: 10px 30px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
}

.main-2 img {
    width: 150px;
    height: 100px;
    border: #3882F6 5px solid;
    border-radius: 10px;
}

.main-4 button {
    border: white 2px solid;
    border-radius: 5px;
    cursor: pointer;
}

.main-4 .call-to-action {
    font-weight: 700;
}

.footer {
    background-color: #1F2937;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 60px;
}

